Permanent bustage js/src/wasm/WasmJS.cpp:1437:21: error: use of undeclared identifier 'FuncTypeToObject when Gecko 94 merges to Beta on 2021-10-04
Categories
(Core :: JavaScript: WebAssembly, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | blocking | verified |
People
(Reporter: aryx, Assigned: rhunt)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1437:21: error: use of undeclared identifier 'FuncTypeToObject'
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1444:21: error: use of undeclared identifier 'TableTypeToObject'
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1453:15: error: use of undeclared identifier 'MemoryTypeToObject'
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1460:21: error: use of undeclared identifier 'GlobalTypeToObject'; did you mean 'GlobalObject'?
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1546:21: error: use of undeclared identifier 'FuncTypeToObject'
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1551:21: error: use of undeclared identifier 'TableTypeToObject'
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1558:15: error: use of undeclared identifier 'MemoryTypeToObject'
2:37.42 /builds/worker/checkouts/gecko/js/src/wasm/WasmJS.cpp:1564:21: error: use of undeclared identifier 'GlobalTypeToObject'; did you mean 'GlobalObject'?
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
The pre-existing code for printing a function type to string used a check
behind 'fuzzingSafe' and I cannot find a reason for this in any
commit history. Searchfox thinks it came from the original commit
for the imports/exports feature from luke, but it's not present
in the commits he landed, nor in the bug. I don't think it's
necessary, so I think we should remove it while we're fixing
this bug.
Comment 2•4 years ago
|
||
-
After importing the patch these failures have appeared: https://treeherder.mozilla.org/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=560be509a92fb63873f606de2a40738e2decca3f&selectedTaskRun=Y5UBUmUGQS2x_cnhFaoKfg.0
-
Imported the patch + backed out other related changes to WasmJS.cpp (patch not shown as Try already knows it from the previous import): https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&revision=e5f5ed2501b929c634bf03eebc1f82591afce28c&selectedTaskRun=JlR_VL0WSPyojZkzWfjXeQ.0
-
After backing out Bug 1731291 + Bug 1730188 there were no other bustages: https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&revision=1fd18a7b648dc9da254850a69101a4ea0b8a3452
Ryan, could you take a look when you have a bit of time?
Thank you.
Comment 3•4 years ago
|
||
Changing severity from -- to S2 because red is not green.
Updated•4 years ago
|
| Assignee | ||
Comment 4•4 years ago
|
||
More code that needs to be behind the ifdef. I've update the patch.
Comment 6•4 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 7•4 years ago
|
||
Updated•4 years ago
|
Description
•